Fri Mar 03 05:36:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSMenu.m:([NSMenuWindowTitleView -drawRect:]) fixed to draw
	contents in bounds rather than given rect.
	
Fri Mar  3 02:25:24 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSWindow.m ([-performZoom:]), ([-zoom:]): Added methods
	with trivial implementation - so that code ported from macosx does
	not crash.

Thu Mar  2 03:16:18 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	Added basic support to create and run gmodels from macosx nibs:
	* Model/GMAppKit.m ([NSApplication -encodeWithModelArchiver:]):
	Basic patch to allow creation of working gmodel from macosx nibs
	with menus: do not encode at all the apple specific NSMenuPanel
	objects.  Thanks to raphael_sebbe@mac.com for testing this patch.
	* Model/GMAppKit.m ([NSImage +createObjectForModelUnarchiver:]):
	Bug fix: don't crash when decoding images with a nil name.
	* Source/NSApplication.m ([-setMainMenu:]): In gmodels created
	from macosx nibs, the windows submenu is called "Window", not
	"Windows".  Patched code to recognize "Window" as identifying the
	windows submenu too.
	* Model/GMAppKit.m ([NSImage +createObjectForModelUnarchiver:]):
	When asked for anything which is not known, return
	GNUstepMenuImage [and not the radio button image as we did
	before].
	* Images/nsmapping.strings: Added AppleMenuImage, NSMenuArrow,
	NSMenuCheckMark.
	* Images/GNUstepMenuImage.tiff: New file obtained by resizing
	GNUstep.tiff.  Anybody with a better understanding of image
	manipulation feel free to replace GNUstepMenuImage.tiff with a
	better one.
	* Images/GNUmakefile: Added GNUstepMenuImage.tiff
	
Wed Mar 01 16:21:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Headers/gnustep/gui/NSWindow.h: New style values added for
	app iconwindow and miniwindows.
	New ivar added for miniwindow counterpart. New method ([-counterpart])
	* Source/NSApplication.m: Create the iconwindow usig the new style.